k8s/app-manifest.yaml
---
# Source: department-web-front-end/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: department-web-front-end
  labels:
    helm.sh/chart: department-web-front-end-0.1.0
    app.kubernetes.io/name: department-web-front-end
    app.kubernetes.io/instance: department-web-front-end
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: department-web-front-end
    app.kubernetes.io/instance: department-web-front-end
---
# Source: department-web-front-end/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department-web-front-end
  labels:
    helm.sh/chart: department-web-front-end-0.1.0
    app.kubernetes.io/name: department-web-front-end
    app.kubernetes.io/instance: department-web-front-end
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: department-web-front-end
      app.kubernetes.io/instance: department-web-front-end
  template:
    metadata:
      labels:
        helm.sh/chart: department-web-front-end-0.1.0
        app.kubernetes.io/name: department-web-front-end
        app.kubernetes.io/instance: department-web-front-end
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      imagePullSecrets:
        - name: harbor-secret
      serviceAccountName: department-web-front-end
      securityContext:
        {}
      containers:
        - name: department-web-front-end
          securityContext:
            {}
          image: "ghcr.io/thesis-i/department-web-front-end:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            failureThreshold: 30
            periodSeconds: 10
            tcpSocket:
              port: http
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: http
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: department-web-front-end/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: department-web-front-end
  labels:
    helm.sh/chart: department-web-front-end-0.1.0
    app.kubernetes.io/name: department-web-front-end
    app.kubernetes.io/instance: department-web-front-end
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: kommander-traefik
  tls:
    - hosts:
        - "app.thesis-i.com"
      secretName: cert-secret
  rules:
    - host: "app.thesis-i.com"
      http:
        paths:
          - path: /department-web-api/
            pathType: Prefix
            backend:
              service:
                name: department-web-back-end
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: department-web-front-end
                port:
                  number: 3000
---
# Source: department-web-front-end/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "department-web-front-end-test-connection"
  labels:
    helm.sh/chart: department-web-front-end-0.1.0
    app.kubernetes.io/name: department-web-front-end
    app.kubernetes.io/instance: department-web-front-end
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['department-web-front-end:3000']
  restartPolicy: Never
